--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div>
         <h1 id="time">
-            <p><span id="minets">00</span>:<span id="seconds">00</span>:<span id="centiseconds">00</span></p>
+            <p><span id="minutes">00</span>:<span id="seconds">00</span>:<span id="centiseconds">00</span></p>
         </h1>
     </div>
 </body>
