--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div>
+    <div class="flexContainer">
         <h1 id="time">
-            <p><span id="minutes">00</span>:<span id="seconds">00</span>:<span id="centiseconds">00</span></p>
+            <span id="minutes">00</span>:<span id="seconds">00</span>:<span id="centiseconds">00</span>
         </h1>
     </div>
 </body>
